--- a/Tree.html
+++ b/Tree.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
-    <html>
+<html>
+
 <head>
     <title> Design Your Own Chirstmas Tree!!! </title>
     <style type="text/css">
@@ -15,31 +15,50 @@
 
 <body>
     <ul id="navbar">
-	      <li><a href="Home.html">The Hub</a></li>
-	      <li><a href="index.html">Pusheen</a></li>
-	      <li><a href="Tree.html">Christmas</a></li>
-	      </ul>
-        <p id="theParagraph">This is a Christmas interactive project. By the time I'm done, you'll be able to make your own Christmas Tree! In order for a good result, please go in order of the list of buttons. If your color name is two words, such as "light blue", remove the space.</p>
-
+        <li><a href="Home.html">The Hub</a></li>
+        <li><a href="index.html">Pusheen</a></li>
+        <li><a href="Tree.html">Christmas</a></li>
+    </ul>
+    <p id="theParagraph">This is a Christmas interactive project. By the time I'm done, you'll be able to make your own Christmas Tree! In order for a good result, please go in order of the list of buttons. If your color name is two words, such as "light blue", remove the
+        space.</p>
+    <!--<select id="dropdown">-->
+    <!--    <option><link rel="icon" type="png" href="http://www.clker.com/cliparts/i/V/W/K/q/b/golden-star-md.png"></option>-->
+    <!--</select>-->
     <ol>
-    <li><input id="input1" />
-    <button id="button1">Click to change color of the text</button></li>
-    <p>     </p>
-    <li><input id="input5"/>
-    <button id="button5">Click to change color of third segement!</button></li>
-    <p>     </p>
-    <li><input id="input4"/>
-    <button id="button4">Click to change color of second segment!</button></li>
-    <p>     </p>
-    <li><input id="input2" />
-    <button id="button2">Click to change color of first segment!</button></li>
-        <p>     </p>
-    <li><input id="input3" />
-    <button id="button3">Click to change color of stump!</button></li>
-        <p>     </p>
-    <li> <input id= "input6"/>
-    <button id="button6">Click to change color of topper!</button></li>
-</ol>
+        <li>
+            <input id="input1" />
+            <button id="button1">Click to change color of the text</button>
+        </li>
+        <p> </p>
+        <li>
+            <input id="input5" />
+            <button id="button5">Click to change color of third segement!</button>
+        </li>
+        <p> </p>
+        <li>
+            <input id="input4" />
+            <button id="button4">Click to change color of second segment!</button>
+        </li>
+        <p> </p>
+        <li>
+            <input id="input2" />
+            <button id="button2">Click to change color of first segment!</button>
+        </li>
+        <p> </p>
+        <li>
+            <input id="input3" />
+            <button id="button3">Click to change color of stump!</button>
+        </li>
+        <p> </p>
+        <li>
+            <input id="input6" />
+            <button id="button6">Click to change color of topper!</button>
+        </li>
+    </ol>
+    
+    <ul>
+        <li><button id="button"><img src="http://www.clker.com/cliparts/i/V/W/K/q/b/golden-star-md.png"></button></li>
+    </ul>
     <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.play.js" type="text/javascript"></script>
 
