--- a/Tree.html
+++ b/Tree.html
@@ -63,7 +63,7 @@
     </ul>
     <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.play.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="p5sound.js"></script>
     <script type="text/javascript" src="Tree.js"></script>
 </body>
 
