--- a/Tree.html
+++ b/Tree.html
@@ -63,8 +63,10 @@
     </ul>
     <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.play.js" type="text/javascript"></script>
-    <script type="text/javascript" src="p5sound.js"></script>
+    <script type="text/javascript" src="p5.sound.js"></script>
+        <script type="text/javascript" src="trees.js"></script>
     <script type="text/javascript" src="Tree.js"></script>
+
 </body>
 
 </html>
