the stump changes color

--- a/Tree.html
+++ b/Tree.html
@@ -29,28 +29,28 @@
         </li>
         <p> </p>
         <li>
-            <input id="input5" />
-            <button id="button5">Click to change color of third segement!</button>
+            <input id="treebotinput" />
+            <button id="treeBotButton">Click to change color of third segement!</button>
         </li>
         <p> </p>
         <li>
-            <input id="input4" />
-            <button id="button4">Click to change color of second segment!</button>
+            <input id="treeMidinput" />
+            <button id="treeMidButton">Click to change color of second segment!</button>
         </li>
         <p> </p>
         <li>
-            <input id="input2" />
-            <button id="button2">Click to change color of first segment!</button>
+            <input id="treeTopInput"/>
+            <button id="treeTopButton">Click to change color of first segment!</button>
         </li>
         <p> </p>
         <li>
-            <input id="input3" />
-            <button id="button3">Click to change color of stump!</button>
+            <input id="stumpInput" />
+            <button id="stumpButton">Click to change color of stump!</button>
         </li>
         <p> </p>
         <li>
-            <input id="input6" />
-            <button id="button6">Click to change color of topper!</button>
+            <input id="topInput" />
+            <button id="topButton">Click to change color of topper!</button>
         </li>
     </ol>
     
