3 layers work properly

--- a/Tree.html
+++ b/Tree.html
@@ -29,12 +29,12 @@
         </li>
         <p> </p>
         <li>
-            <input id="treebotinput" />
-            <button id="treeBotButton">Click to change color of third segement!</button>
+            <input id="treeBoInput" />
+            <button id="treeBoButton">Click to change color of third segement!</button>
         </li>
         <p> </p>
         <li>
-            <input id="treeMidinput" />
+            <input id="treeMidInput" />
             <button id="treeMidButton">Click to change color of second segment!</button>
         </li>
         <p> </p>
