Just saving to be sure

--- a/Tree.html
+++ b/Tree.html
@@ -20,8 +20,7 @@
         <li><a href="Tree.html">Christmas</a></li>
     </ul>
     
-    <p id="theParagraph">This is a Christmas interactive project. By the time I'm done, you'll be able to make your own Christmas Tree! In order for a good result, please go in order of the list of buttons. If your color name is two words, such as "light blue", remove the
-        space.</p>
+    <p id="theParagraph">This is a Christmas interactive project.  If your color name is two words, such as "light blue", remove the space. For more choices of colors, visit <a href="http://www.w3schools.com/html/html_colornames.asp">http://www.w3schools.com/html/html_colornames.asp</a>. Simply choose a color name from this site, such as "thistle" or copy and paste the number of the color, such as "#D8BFD8".</p>
     <ol>
         <li>
             <input id="input1" />
