Adding changing colors

--- a/Lantern.html
+++ b/Lantern.html
@@ -12,7 +12,24 @@
         <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/chinese-new-year-1/500/lantern-512.png" type="png" />
     </head>
     <body>
-        <button id ="bodyColor">Lantern Body</button>
+        <button id ="bodyButton">Lantern Body</button>
+        <input id="bodyInput"></input>
+        <p>                                                                </p>
+        <button id="ballButton">Tassle Ball</button>    
+        <input id="ballInput"></input>
+
+        <p>                                                                </p>
+        <button id="tailButton">Tassle Tail</button>
+        <input id="tailInput"></input>
+        <p>                                                                </p>
+        <button id="topButton">Lantern Top</button>
+        <input id="topInput"></input>
+        <p>                                                                <img src="http://heathersanimations.com/dragon/azie13.gif"></p>
+        <button id="backgroundButton">Background</button>
+        <input id="backgroundInput"></input>
+        <p>                                                                </p>
+        <button id="dragons"><img src="http://chinesecommunity.org.nz/themes/YearoftheDragon2012v2/images/Year-of-the-Dragon-2012.png"></button>
+
  <script src="lib/p5.js" type="text/javascript"></script>
     <script src="lib/p5.play.js" type="text/javascript"></script><script type="text/javascript" src="Lantern.js"></script>
     </body>
