--- a/Lantern.html
+++ b/Lantern.html
@@ -24,13 +24,14 @@
         <p>                                                                </p>
         <button id="topButton">Lantern Top</button>
         <input id="topInput"></input>
-        <p>                                                                <img src="http://heathersanimations.com/dragon/azie13.gif"></p>
+        <p>                                                                <marquee direction="left"><img id="dragonGif" src="http://heathersanimations.com/dragon/azie13.gif"></marquee></p>
         <button id="backgroundButton">Background</button>
         <input id="backgroundInput"></input>
         <p>                                                                </p>
         <button id="dragons"><img src="http://chinesecommunity.org.nz/themes/YearoftheDragon2012v2/images/Year-of-the-Dragon-2012.png"></button>
 
  <script src="lib/p5.js" type="text/javascript"></script>
-    <script src="lib/p5.play.js" type="text/javascript"></script><script type="text/javascript" src="Lantern.js"></script>
+    <script src="lib/p5.play.js" type="text/javascript"></script>
+    <script type="text/javascript" src="Lantern.js"></script>
     </body>
 </html>
